--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
 	<version>2.0.0-SNAPSHOT</version>
 	<name>objectos :: comuns :: cli</name>
 	<scm>
-		<connection>scm:git:git@github.com:objectos/objectos-cli.git</connection>
-		<developerConnection>scm:git:git@github.com:objectos/objectos-cli.git</developerConnection>
+		<connection>scm:git:git@github.com:objectos/objectos-comuns-cli.git</connection>
+		<developerConnection>scm:git:git@github.com:objectos/objectos-comuns-cli.git</developerConnection>
 	</scm>
 	<properties>
 		<org.jcommander.version>1.27</org.jcommander.version>
