--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<version>2.0.19</version>
 	</parent>
 	<artifactId>objectos-comuns-cli</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>2.0.0</version>
 	<name>objectos :: comuns :: cli</name>
 	<scm>
 		<connection>scm:git:git@github.com:objectos/objectos-comuns-cli.git</connection>
