--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>br.com.objectos</groupId>
-		<artifactId>objectos-comuns-parent</artifactId>
-		<version>2.0.19</version>
+		<artifactId>parent</artifactId>
+		<version>1.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>objectos-comuns-cli</artifactId>
 	<version>2.0.2-SNAPSHOT</version>
